Ajustes en pantalla de categoría

--- a/css/style.css
+++ b/css/style.css
@@ -1957,3 +1957,14 @@ margin-right: 10px;
   float: right;
 }
 
+.add-cat-nombre {
+  float: left;
+  width: 60%;
+}
+
+.add-cat-button {
+  width: 30%;
+  float: left;
+  margin-left: 10px;
+}
+
